@@ -45,6 +45,7 @@
       <li><a rel="gsdoc" href="STEnvironment.html#method$STEnvironment-createsUnknownObjects">-createsUnknownObjects</a></li>
       <li><a rel="gsdoc" href="STEnvironment.html#method$STEnvironment-fullScriptingEnabled">-fullScriptingEnabled</a></li>
       <li><a rel="gsdoc" href="STEnvironment.html#method$STEnvironment-includeBundle:">-includeBundle:</a></li>
+      <li><a rel="gsdoc" href="STEnvironment.html#method$STEnvironment-includeFramework:">-includeFramework:</a></li>
       <li><a rel="gsdoc" href="STEnvironment.html#method$STEnvironment-initDefault">-initDefault</a></li>
       <li><a rel="gsdoc" href="STEnvironment.html#method$STEnvironment-initWithDescription:">-initWithDescription:</a></li>
       <li><a rel="gsdoc" href="STEnvironment.html#method$STEnvironment-initWithDescriptionName:">-initWithDescriptionName:</a></li>
@@ -133,6 +134,15 @@
       
             Include scripting capabilities advertised by the
             bundle 
+    </p>
+    <hr width="25%" align="left" />
+    <h3><a name="method$STEnvironment-includeFramework:">includeFramework:</a></h3>
+    - (void) <b>includeFramework:</b> (NSString*)frameworkName;<br />
+    <p>
+      
+            Include scripting capabilities advertised by the
+            framework with name
+            
     </p>
     <hr width="25%" align="left" />
     <h3><a name="method$STEnvironment-initDefault">initDefault</a></h3>
