@@ -1,6 +1,8 @@
 2003 May 10
 
     * Fixed linking under mingw32
+    * STBundleInfo: implemented framework searching
+    * STEnvironment: includeFramework: new method.
 
 2003 May 2   Stefan Urbanek <urbanek@host.sk>
 
